Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -259,7 +259,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 740px;
+  width: 80%;
   z-index:1;
 }
 
@@ -268,7 +268,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0px;
   padding: 0px;
   margin-top:20px;
